src/Test/Fixtures/Good/Arrays/angle64ArrayDeclaration.lf
let angles: [angle64; 2] = [3.14, 1.57];