src/Test/Fixtures/Bad/Arrays/missingArrayLengthInDeclaration.lf
let ints: [i32; ] = [1, 2, 3];